--- a/Web.config
+++ b/Web.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0"?>
 <configuration>
 	<appSettings>
-
 		<add key="Host" value="smtp.gmail.com"/>
 		<add key="Username" value="ashokkrsah19@gmail.com"/>
 		<!--From mail / UserName-->
@@ -21,13 +20,15 @@
 	</appSettings>
 
 	<system.web>
-		<customErrors mode="Off"/>
-		<compilation debug="true" targetFramework="4.8"/>
+		<customErrors mode="RemoteOnly" defaultRedirect="~/404.html">
+			<error statusCode="404" redirect="~/404.html"/>
+		</customErrors>
+		<compilation debug="false" targetFramework="4.8"/>
 		<pages controlRenderingCompatibilityVersion="4.0"/>
+		<httpRuntime targetFramework="4.8" maxRequestLength="10240" executionTimeout="110" />
 	</system.web>
 
 	<system.webServer>
-
 		<staticContent>
 			<mimeMap fileExtension=".webp" mimeType="image/webp" />
 		</staticContent>
@@ -37,5 +38,30 @@
 			<error statusCode="404" prefixLanguageFilePath="" path="/404.html" responseMode="ExecuteURL"/>
 		</httpErrors>
 
+		<!-- Remove X-Powered-By header for security -->
+		<httpProtocol>
+			<customHeaders>
+				<remove name="X-Powered-By" />
+			</customHeaders>
+		</httpProtocol>
+
+		<!-- Enable compression for better performance -->
+		<urlCompression doStaticCompression="true" doDynamicCompression="true" />
+
+		<!-- Configure default document -->
+		<defaultDocument>
+			<files>
+				<clear />
+				<add value="default.aspx" />
+				<add value="Default.aspx" />
+			</files>
+		</defaultDocument>
+
+		<!-- Security: Remove unnecessary HTTP headers -->
+		<security>
+			<requestFiltering>
+				<requestLimits maxAllowedContentLength="10485760" />
+			</requestFiltering>
+		</security>
 	</system.webServer>
 </configuration>
