--- a/.github/workflows/main_onetapsolution.yml
+++ b/.github/workflows/main_onetapsolution.yml
@@ -27,14 +27,14 @@ jobs:
       - name: Restore NuGet packages
         run: nuget restore onetapsolution.sln
 
-      - name: Build solution
-        run: msbuild onetapsolution.sln /nologo /verbosity:m /t:Build /p:Configuration=Release /p:DeployOnBuild=true /p:PublishProfile=FolderProfile /p:OutDir=.\published\
+      - name: Build and Publish
+        run: msbuild onetapsolution.csproj /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\" /p:Configuration=Release
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: ASP-app
-          path: 'published\_PublishedWebsites\onetapsolution'
+          path: 'published'
 
   deploy:
     runs-on: windows-latest
