--- a/Web.config
+++ b/Web.config
@@ -29,6 +29,9 @@
 	</system.web>
 
 	<system.webServer>
+		<!-- Disable directory browsing -->
+		<directoryBrowse enabled="false" />
+
 		<staticContent>
 			<mimeMap fileExtension=".webp" mimeType="image/webp" />
 		</staticContent>
@@ -63,5 +66,8 @@
 				<requestLimits maxAllowedContentLength="10485760" />
 			</requestFiltering>
 		</security>
+
+		<!-- Ensure all managed modules run for all requests -->
+		<modules runAllManagedModulesForAllRequests="true" />
 	</system.webServer>
 </configuration>
