--- a/.github/workflows/main_onetapsolution.yml
+++ b/.github/workflows/main_onetapsolution.yml
@@ -27,8 +27,11 @@ jobs:
       - name: Restore NuGet packages
         run: nuget restore onetapsolution.sln
 
-      - name: Build and Publish
-        run: msbuild onetapsolution.csproj /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\" /p:Configuration=Release
+      - name: Build solution
+        run: msbuild onetapsolution.sln /nologo /verbosity:m /t:Build /p:Configuration=Release /p:Platform="Any CPU"
+
+      - name: Publish Web Application
+        run: msbuild onetapsolution.csproj /nologo /verbosity:m /t:WebPublish /p:WebPublishMethod=FileSystem /p:PublishUrl="$env:GITHUB_WORKSPACE\published" /p:Configuration=Release /p:DeployOnBuild=true
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
