Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_onetapsolution.yml
+++ b/.github/workflows/main_onetapsolution.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.NET app to Azure Web App - onetapsolution
+name: Build and deploy ASP app to Azure Web App - onetapsolution
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: windows-latest
     permissions:
-      contents: read
+      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -25,29 +25,23 @@ jobs:
         uses: NuGet/setup-nuget@v1.0.5
 
       - name: Restore NuGet packages
-        run: nuget restore onetapsolution.sln
+        run: nuget restore
 
-      - name: Build solution
-        run: msbuild onetapsolution.sln /nologo /verbosity:m /t:Build /p:Configuration=Release /p:Platform="Any CPU"
-
-      - name: Publish Web Application
-        run: msbuild onetapsolution.csproj /nologo /verbosity:m /t:WebPublish /p:WebPublishMethod=FileSystem /p:PublishUrl="$env:GITHUB_WORKSPACE\published" /p:Configuration=Release /p:DeployOnBuild=true
+      - name: Publish to folder
+        run: msbuild /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: ASP-app
-          path: 'published'
+          path: '/published/**'
 
   deploy:
     runs-on: windows-latest
     needs: build
     permissions:
-      id-token: write
-      contents: read
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
@@ -58,9 +52,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_14AFF202C3914D0BB03220B129271DB4 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_A33251009857484C9DB25276B51C7DC2 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_694D8DDBF84B463A8F2674EF71A0EE7F }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_BDB92309CE9C4AD4B2541E12083644AC }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B2A3F2DAAE7A44D5AA4B5766CBD1419A }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_DAFCC76F0804434F971504DE954F4F28 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -69,3 +63,4 @@ jobs:
           app-name: 'onetapsolution'
           slot-name: 'Production'
           package: .
+          
